ingress/ingress-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-frontend 
  namespace: myistio
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: frontend.ikubernetes.k8s
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend 
          servicePort: 80
