ingress/ingress-tracing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tracing
  namespace: istio-system
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: tracing.ikubernetes.k8s
    http:
      paths:
      - path: /
        backend:
          serviceName: tracing 
          servicePort: 80
